--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -14,7 +14,7 @@
   position: relative;
 
   @media (min-width: $tablet-width) {
-    margin-block: 52px;
+    margin-block: 39px 51px;
   }
 
   @media (min-width: $desktop-width) {
