--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -381,8 +381,9 @@
 
 .form__comment-input {
   @include form-common-text;
+  resize: vertical;
   color: $dark-gray;
-  min-width: 100%;
+  border-color: $very-light-gray;
   min-height: 150px;
   margin-top: 36px;
   padding: 14px;
