--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,10 +1,75 @@
 .main-nav {
   background-color: $base-white;
-  display: flex;
+  display: grid;
+  z-index: 2;
+  justify-content: space-between;
 
   @media (min-width: $desktop-width) {
-    max-width: 50%;
     background-color: transparent;
+  }
+}
+
+.main-nav--is-open{
+  grid-template-columns: auto 101px auto;
+  grid-template-rows: auto 1fr;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+
+  .main-nav__list {
+    background-color: $base-white;
+    grid-column: 1 / 4;
+    position: absolute;
+    top: 65px;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+
+    @media (min-width: $tablet-width) {
+      position: static;
+      background-color: transparent;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 22px;
+      width: auto;
+    }
+    
+    @media (min-width: $desktop-width) {
+      max-width: 50%;
+      gap: 29px;
+    }  
+  }
+}
+
+.main-nav--is-close {
+  grid-template-columns: auto 101px auto;
+  align-items: center;
+  justify-content: space-between;
+
+  .main-nav__list {
+    display: none;
+
+    @media (min-width: $tablet-width) {
+      position: static;
+      background-color: transparent;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 22px;
+      width: auto;
+    }
+
+    @media (min-width: $desktop-width) {
+      gap: 29px;
+      max-width: 50%;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 22px;
   }
 }
 
@@ -21,7 +86,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    //column-gap: 21px;
+    column-gap: 21px;
   }
 }
 
@@ -45,8 +110,7 @@
   @include link-reset;
   color: $base-black;
   text-transform: uppercase;
-  padding-block: 23px;
-  padding-inline: 20px 0;
+  padding-block: 23px 22px;
 
   @media (min-width: $tablet-width) {
     padding-inline: 6px;
@@ -71,61 +135,25 @@
   }
 }
 
-.main-nav--is-open .main-nav__wrapper {
-  position: absolute;
-  top: 62px;
-  left: -20px;
-  width: calc(100% + 20px);
-  background-color: $base-white;
-
-  @media (min-width: $tablet-width) {
-    position: static;
-    background-color: transparent;
-  }
-}
-
-.main-nav--is-close .main-nav__list {
-  display: none;
-
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 22px;
-  }
-
-  @media (min-width: $desktop-width) {
-    gap: 29px;
-  }
-}
-
-.main-nav--is-open .main-nav__list {
-
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 22px;
-  }
-
-  @media (min-width: $desktop-width) {
-    gap: 29px;
-  }
-}
-
 //Отработка меню при отключенном JS
 
-.main-nav--nojs .btn-burger {
-  &::before,
-  &::after{
-    display: none;
-  }
-}
-
-
 .main-nav--nojs {
-  .main-nav__wrapper {
-    display: block;
+    .btn-burger {
+      &::before,
+      &::after{
+        display: none;
+    }
   }
 
+  .main-nav__list {
+    position: static;
+    padding-top: 10px;
+    margin-bottom: -10px;
+  }
+
+  .main-nav__item {
+  margin-inline: -20px;
+  }
 }
 
 .main-nav__link--active {
@@ -188,7 +216,7 @@
     box-shadow: none;
   }
 
-  &::after {
-    transform: rotate(-45deg);
-  }
+    &::after {
+      transform: rotate(-45deg);
+    }
 }
