--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -24,7 +24,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-block: 32px 0;
+    padding-block: 6px 0;
   }
 
 
@@ -78,8 +78,7 @@
 
   @media (min-width: $desktop-width) {
     grid-column: 2;
-    margin-left: 0;
-    margin-bottom: 20px;
+    margin: 0;
   }
 }
 
