--- a/source/styles/blocks/page-header.scss
+++ b/source/styles/blocks/page-header.scss
@@ -29,7 +29,7 @@
     content: "";
     background-image:
       linear-gradient(to top, #ffffff 0, rgba(104, 183, 56, 0.85) 0),
-      image-set(url("../../images/index-background-desktop@1x.png") type("image/png") 1x, url("../../images/index-background-desktop@2x.png") type("image/png") 2x, url("../../images/index-background-desktop@1x.webp") type("image/webp") 1x, url("../../images/index-background-desktop@2x.webp") type("image/webp") 2x);
+      image-set(url("../../images/index-background-desktop@1x.jpg") type("image/jpg") 1x, url("../../images/index-background-desktop@2x.jpg") type("image/jpg") 2x, url("../../images/index-background-desktop@1x.webp") type("image/webp") 1x, url("../../images/index-background-desktop@2x.webp") type("image/webp") 2x);
     height: 694px;
     position: absolute;
     left: 50%;
