--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -12,6 +12,7 @@ $light-special-gray: #d9d9d9;
 $hover-light-gray: #bababa;
 $light-gray: #e6e6e6;
 $very-light-gray: #e7e7e7;
+$pale-gray: #ebebeb;
 $focus-invalid: #ff8282;
 
 // Viewports
