Замечание product__container планшетная версия

--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -27,3 +27,4 @@
 @import "./blocks/slider.scss";
 @import "./blocks/container";
 @import "./blocks/form.scss";
+@import "./blocks/more-products.scss"
