--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -13,6 +13,7 @@ $hover-light-gray: #bababa;
 $light-gray: #e6e6e6;
 $very-light-gray: #e7e7e7;
 $pale-gray: #ebebeb;
+$special-pale-gray: #d3d3d3;
 $focus-invalid: #ff8282;
 
 // Viewports
