--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -165,6 +165,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 1 / 3;
     padding-left: 0;
+    box-shadow: -40px 0 0 0 $base-white, 40px 0 0 0 $base-white;
   }
 }
 
