--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -85,19 +85,19 @@
 .product__link {
   @include link-reset;
   color: $base-black;
-  padding-top: 9px;
+  padding-block-start: 9px;
 
   @media (min-width: $tablet-width) {
     text-align: center;
     grid-row: 2 / 3;
     grid-column: 1 / 3;
-    padding-top: 15px;
+    padding-block-start: 15px;
     padding-inline: 60px;
   }
 
   @media (min-width: $desktop-width) {
     padding-inline: 20px;
-    padding-top: 11px;
+    padding-block-start: 7px;
   }
 }
 
@@ -131,8 +131,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-block-end: 33px;
-    row-gap: 8px;
+    row-gap: 5px;
+    padding-block: 24px 35px;
   }
 }
 
