--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -645,6 +645,10 @@
   appearance: none;
   cursor: pointer;
 
+  &:hover {
+    border: 1px solid $hover-light-gray;
+  }
+
   &:disabled {
     opacity: 0.3;
     pointer-events: none;
