Исправляет gap в каталоге в доп. каталоге

--- a/source/styles/blocks/other-action.scss
+++ b/source/styles/blocks/other-action.scss
@@ -22,7 +22,7 @@
 
   @media (min-width: $desktop-width) {
     background-position: 0 0, calc(100% - 2px);
-    gap: 0 40px;
+    gap: 47px;
     flex-direction: column;
     grid-column: 2 / 3;
     padding-left: 0;
