Поправил стрелку и блоки в слайдере

--- a/source/styles/blocks/page-header.scss
+++ b/source/styles/blocks/page-header.scss
@@ -15,7 +15,7 @@
 
 .page-header__container {
   @media (min-width: $tablet-width) {
-    padding-block: 14px;
+    padding-block: 16px 20px;
   }
 
   @media (min-width: $desktop-width) {
