--- a/source/styles/blocks/page-header.scss
+++ b/source/styles/blocks/page-header.scss
@@ -1,11 +1,3 @@
-.page-header {
-  padding-block: 12px 10px;
-
-  @media (min-width: $tablet-width) {
-    padding: 0;
-  }
-}
-
 .page-header__logo {
   @media (min-width: $tablet-width) {
     display: flex;
@@ -13,14 +5,10 @@
   }
 }
 
-.page-header__container {
-  @media (min-width: $tablet-width) {
-    padding-block: 16px 20px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-block: 48px 62px;
-  }
+.page-header__logo-title {
+  display: flex;
+  margin-inline: auto;
+  margin-block: 24px;
 }
 
 .page-header--index::before {
