--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -7,6 +7,7 @@
   display: grid;
   grid-template-columns: 1fr;
   place-items: center;
+  align-self: start;
   max-width: 560px;
   height: auto;
   margin-block: -2px;
