--- a/source/styles/blocks/btn-burger.scss
+++ b/source/styles/blocks/btn-burger.scss
@@ -4,6 +4,7 @@
   width: 40px;
   height: 38px;
   padding: 0;
+  margin-inline-start: 7px;
   position: relative;
 
   @media (min-width: $tablet-width) {
