--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -8,6 +8,7 @@
   padding-block: 31px 12px;
   display: flex;
   align-items: center;
+  justify-content: center;
 
   @media (min-width: $tablet-width) {
     padding: 0;
