--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -46,11 +46,7 @@
 .logo__image-footer {
   width: 128px;
   height: 24px;
-  flex-grow: 1;
-
-  @media (min-width: $tablet-width) {
-    flex-grow: 0;
-  }
+  margin-inline: auto;
 }
 
 a:has(.logo__image-title) {
