--- a/source/styles/blocks/page-header.scss
+++ b/source/styles/blocks/page-header.scss
@@ -1,14 +1,17 @@
 .page-header__logo {
+  margin-inline-end: 7px;
+
   @media (min-width: $tablet-width) {
     display: flex;
     align-items: center;
+    margin-inline-end: 0;
   }
 }
 
 .page-header__logo-title {
   display: flex;
   margin-inline: auto;
-  margin-block: 24px;
+  margin-block: 24px 22px;
 }
 
 .page-header--index::before {
