--- a/source/styles/blocks/page-header.scss
+++ b/source/styles/blocks/page-header.scss
@@ -17,15 +17,14 @@
 .page-header--index::before {
   @media (min-width: $desktop-width) {
     content: "";
-    background-image:
-      linear-gradient(to top, #ffffff 0, rgba(104, 183, 56, 0.85) 0),
-      image-set(url("../../images/index-background-desktop@1x.jpg") type("image/jpg") 1x, url("../../images/index-background-desktop@2x.jpg") type("image/jpg") 2x, url("../../images/index-background-desktop@1x.webp") type("image/webp") 1x, url("../../images/index-background-desktop@2x.webp") type("image/webp") 2x);
+    display: block;
+    width: 50%;
     height: 694px;
+    background-image: linear-gradient(to top, #ffffff 0, rgba(104, 183, 56, 0.85) 0), image-set(url("../../images/index-background-desktop@1x.jpg") type("image/jpg") 1x, url("../../images/index-background-desktop@2x.jpg") type("image/jpg") 2x, url("../../images/index-background-desktop@1x.webp") type("image/webp") 1x, url("../../images/index-background-desktop@2x.webp") type("image/webp") 2x), linear-gradient(to right top, #4e4f54, #2b2a2e);
+    background-repeat: no-repeat;
     position: absolute;
     left: 50%;
     right: 0;
-    background-repeat: no-repeat;
-    background-size: cover;
     z-index: -1;
   }
 }
