--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -24,7 +24,7 @@
   align-items: center;
   background-color: transparent;
 
-  .btn-burger {
+  .main-nav__btn {
     &::before,
     &::after {
       content: "";
@@ -69,7 +69,7 @@
 }
 
 .main-nav--nojs {
-  .btn-burger {
+  .main-nav__btn {
     display: none;
   }
 
@@ -118,7 +118,7 @@
     }
   }
 
-  .btn-burger::before {
+  .main-nav__btn::before {
     content: "";
     position: absolute;
     display: block;
