--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -7,7 +7,7 @@
     display: block;
     width: 100%;
     height: 302px;
-    background-image: linear-gradient(hsla(97, 53%, 47%, 0.8) 100%, #68b738), image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x), linear-gradient(to right top, #525257, #403f44);
+    background-image: linear-gradient(hsla(97, 53%, 47%, 0.8) 100%, #68b738), image-set(url("../../images/index-background-mobile@1x.jpg") type("image/jpg") 1x, url("../../images/index-background-mobile@2x.jpg") type("image/jpg") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x), linear-gradient(to right top, #525257, #403f44);
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
